
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int bzero (char*,int) ;

int double_up(unsigned long blah, char *doh)
{
        int a;
        unsigned char *ptr,*ptr2;
        bzero(doh,6);
        ptr=doh;
        ptr2=(char *)&blah;
        for (a=0;a<4;a++) {
                *ptr++=*ptr2;
                if (*ptr2==0xff) *ptr++=0xff;
                ptr2++;
        }
        return(1);
}
